--- a/contact.html
+++ b/contact.html
@@ -52,11 +52,10 @@
                 <th>お問い合わせ内容</th>
                 <td><textarea class="inquiry"></textarea></td>
               </tr>
+                <th></th>
+                <td class="button_area"><input type="submit" class="button" value="送信"></td>
             </table>
           </form>
-          <div class="button_area">
-            <input type="submit" class="button" value="送信">
-          </div>
         </article>
       </div>
       <footer class="footer">
